# StravaInky

./: .env  README.md  config.py  pyproject.toml  requirements.txt  stravainky_dashboard.py  stravainky_getaccesstoken.py  stravainkydashboard.service  stravainkydashboard.timer
src/stravainky/: __init__.py  get_athlete.py  get_strava_data.py  prepare_dashboard_image.py  strava_access.py  stravainky_dashboard.py
